# ai18n

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  translations.yaml
ai18n/: cli.py  config.py  message.py  openai.py  translator.py
ai18n/templates/: prompt.jinja
tests/: load_po.py  test_load_po.py
tests/fixtures/po/: en.po  sp.po
transpo/: cli.py  constants.py  message.py  openai.py  translator.py
